--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    //id 'jacoco'
 }
 
 plugins {
@@ -28,5 +29,15 @@ sourceSets {
     }
 }
 dependencies {
-    compile 'junit:junit:4.12'
+//    compile 'junit:junit:4.12'
+    testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')
+}
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+    //finalizedBy jacocoTestReport // report is always generated after tests run
+    //jacoco was being annoying expecting java 12 or something not really sure  how to fix since we using java 15 i think
 }
