--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    //id 'jacoco'
+    id 'jacoco'
 }
 
 plugins {
@@ -13,6 +13,10 @@ mainClassName = 'Main'
 javafx {
     version = "15.0.1"
     modules = [ 'javafx.controls','javafx.fxml', 'javafx.media']
+}
+
+jacoco {
+    toolVersion = "0.8.6"
 }
 
 group 'src.main.java'
@@ -38,6 +42,6 @@ test {
     testLogging {
         events "passed", "skipped", "failed"
     }
-    //finalizedBy jacocoTestReport // report is always generated after tests run
+    finalizedBy jacocoTestReport // report is always generated after tests run
     //jacoco was being annoying expecting java 12 or something not really sure  how to fix since we using java 15 i think
 }
